@@ -1,3 +1,8 @@
+2010-04-12 [iwkse]	0.9.9cvs17
+
+	* src/fancy_viewer.c
+            :set noexpandtab
+
 2010-04-12 [iwkse]	0.9.9cvs16
 
 	* src/fancy_viewer.c
